* LibA2 0.06 beta (October 8, 2006)

  Updated modules:
    AppleII::Disk	version 0.06
      The write_blocks method now treats block 0 specially

    AppleII::ProDOS	version 0.06
      Can now write sparse files
      pack_date now accepts Date::Calc format dates
      Added unpack_date

* LibA2 0.05 beta (March 27, 2006)

  Fixes for the build process (it didn't like spaces in pathnames)
  If you got LibA2 0.04 to pass tests, you don't need to update.

  Updated modules:
    AppleII::Disk	version 0.05
      Now compatible with versions of IO::File older than 1.11

* LibA2 0.04 beta (March 26, 2006)

  Now uses Module::Build instead of ExtUtils::MakeMaker
  You can use --no-scripts with Build.PL to avoid installing utility scripts
  Now has tests for AppleII::Disk & AppleII::ProDOS
  Removed the .pl extension from utility scripts

  Updated utilities:
    prodos   		version 0.04
      Fixed to work with current Term::ReadLine::Perl
      Added md as an alias for mkdir

    pro_fmt   		version 0.04
      Now has command line options (try --help for a list)

    pro_opt   		version 0.04
      Updated documentation

  Updated modules:
    AppleII::Disk	version 0.04
      INCOMPATIBLE CHANGE:  pad_block is now just a subroutine, not a method
      Uses IO::File instead of FileHandle
      The read_blocks method now treats block 0 specially

    AppleII::ProDOS	version 0.04
      Can now read sparse files correctly
      Fixed some places where filenames weren't being uppercased
      Fixed a Y2K issue in converting timestamps to ProDOS format

* LibA2 0.003 beta (February 26, 1997)

  First beta release of LibA2

  New utilities:
    var_display.pl	version 1.004

  Updated utilities:
    awp2txt.pl		version 0.005
      Includes documentation

    prodos.pl		version 0.010
      Includes documentation
      Supports an external pager for long text displays

    pro_opt.pl		version 0.004
      Includes documentation
      Now runs much faster

  Updated modules: